Ejercicio 1 completo y avance tarea 1

--- a/Taller 3D_Semana 3_Actividad 1.csproj
+++ b/Taller 3D_Semana 3_Actividad 1.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Figura Rectangulo.cs" />
+    <Compile Include="Figura Triangulo.cs" />
+    <Compile Include="Figura.cs" />
+    <Compile Include="Figura Circulo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
